show realese information

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Test page sns</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"> </script>
+        <script src = "info.js"></script>
+    </head>
+    <body>
+        <center>Future release</center>
+        <div id = "product">
+        </div>
+    </body>
+</html>
+
